prettier nrefs for those ones that are new

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -9144,9 +9144,9 @@ is established in \cite{OntoGraph}.
 
 \sclause{Abstract Syntax Conformance of OWL 2 With \DOL}
 
-The metaclass \syntax{OWLOntology}~\nref{ODM}, 11.2 is a subclass (in the sense of SMOF
+The metaclass \syntax{OWLOntology}~(\nref{ODM}, 11.2) is a subclass (in the sense of SMOF
 multiple classification) of \syntax{NativeDocument}.
-The metaclass \syntax{OWLUniverse}~\nref{ODM}, 11.7 is a subclass (in the sense of SMOF
+The metaclass \syntax{OWLUniverse}~(\nref{ODM}, 11.7) is a subclass (in the sense of SMOF
 multiple classification) of \syntax{BasicOMS}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -9571,9 +9571,9 @@ We distinguish three cases.
 
 \sclause{Abstract Syntax Conformance of Common Logic With \DOL}
 
-The metaclass \syntax{Text}~\nref{ODM}, 12.2 is a subclass (in the sense of SMOF \nref{SMOF}
+The metaclass \syntax{Text}~(\nref{ODM}, 12.2) is a subclass (in the sense of SMOF (\nref{SMOF})
 multiple classification) of \syntax{NativeDocument}.
-The metaclass \syntax{Sentence}~\nref{ODM}, 12.2 is a subclass (in the sense of SMOF \nref{SMOF}
+The metaclass \syntax{Sentence}~(\nref{ODM}, 12.2) is a subclass (in the sense of SMOF (\nref{SMOF})
 multiple classification) of \syntax{BasicOMS}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -9666,9 +9666,9 @@ in order to obtain a theory in the \CL institution.
 
 \sclause{Abstract Syntax Conformance of RDF and RDF Schema  With \DOL}
 
-The metaclass \syntax{rdfDocument}~\nref{ODM}, 14.2.2 is a subclass (in the sense of SMOF \nref{SMOF}
+The metaclass \syntax{rdfDocument}~(\nref{ODM}, 14.2.2) is a subclass (in the sense of SMOF (\nref{SMOF})
 multiple classification) of \syntax{NativeDocument}.
-The metaclass \syntax{graph}~\nref{ODM}, 14.2.3 is a subclass (in the sense of SMOF \nref{SMOF}
+The metaclass \syntax{graph}~(\nref{ODM}, 14.2.3) is a subclass (in the sense of SMOF (\nref{SMOF})
 multiple classification) of \syntax{BasicOMS}.
 
 
@@ -9763,14 +9763,14 @@ operations are query operations.
 
 \sclause{Abstract Syntax Conformance of UML With \DOL}
 
-The metaclass \syntax{Package}~\nref{UML} is a subclass (in the sense of SMOF \nref{SMOF}
+The metaclass \syntax{Package}~(\nref{UML}) is a subclass (in the sense of SMOF (\nref{SMOF})
 multiple classification) of \syntax{NativeDocument}.
-The metaclass \syntax{PackageableElement}~\nref{UML} is a subclass (in the sense of SMOF \nref{SMOF}
+The metaclass \syntax{PackageableElement}~(\nref{UML}) is a subclass (in the sense of SMOF (\nref{SMOF})
 multiple classification) of \syntax{BasicOMS}.
 
 \sclause{Serialization Conformance of UML With \DOL}
 
-The XMI \nref{XMI} serialization, derived from the MOF metamodel, is widely used
+The XMI (\nref{XMI}) serialization, derived from the MOF metamodel, is widely used
 for UML. Hence, UML is serialization conformant with \DOL.
 
 \sclause{Semantic Conformance of UML With \DOL}
@@ -10784,9 +10784,9 @@ The underlying logic is unsorted first-order logic.
 
 \sclause{Abstract Syntax Conformance of TPTP With \DOL}
 
-The BNF nonterminal \syntax{TPTP\_file} of the TPTP concrete syntax~\cite{TPTP-BNF} is construed as a metaclass, and as such it is a subclass (in the sense of SMOF \nref{SMOF}
+The BNF nonterminal \syntax{TPTP\_file} of the TPTP concrete syntax~\cite{TPTP-BNF} is construed as a metaclass, and as such it is a subclass (in the sense of SMOF (\nref{SMOF})
 multiple classification) of \syntax{NativeDocument}.
-The BNF nonterminal \syntax{annotated\_formula} of the TPTP concrete syntax~\cite{TPTP-BNF} is construed as a metaclass, and as such is a subclass (in the sense of SMOF \nref{SMOF}
+The BNF nonterminal \syntax{annotated\_formula} of the TPTP concrete syntax~\cite{TPTP-BNF} is construed as a metaclass, and as such is a subclass (in the sense of SMOF (\nref{SMOF})
 multiple classification) of \syntax{BasicOMS}.
 
 \sclause{Serialization Conformance of TPTP With \DOL}
@@ -10817,9 +10817,9 @@ sentences, expressing the (free) generation of datatypes.
 
 \sclause{Abstract Syntax Conformance of CASL With \DOL}
 
-The EBNF nonterminal \syntax{LIBRARY} for the \CASL abstract syntax~\cite{CASL-RM} is construed as a metaclass, and as such it is a subclass (in the sense of SMOF \nref{SMOF}
+The EBNF nonterminal \syntax{LIBRARY} for the \CASL abstract syntax~\cite{CASL-RM} is construed as a metaclass, and as such it is a subclass (in the sense of SMOF (\nref{SMOF})
 multiple classification) of \syntax{NativeDocument}.
-The EBNF nonterminal \syntax{BASIC\_SPEC} for the \CASL abstract syntax~\cite{CASL-RM} is construed as a metaclass, and as such it is a subclass (in the sense of SMOF \nref{SMOF}
+The EBNF nonterminal \syntax{BASIC\_SPEC} for the \CASL abstract syntax~\cite{CASL-RM} is construed as a metaclass, and as such it is a subclass (in the sense of SMOF (\nref{SMOF})
 multiple classification) of \syntax{BasicOMS}.
 
 \sclause{Serialization Conformance of CASL With \DOL}
