--- a/Standard/OMG_OntoIOp_current-diff-all.tex
+++ b/Standard/OMG_OntoIOp_current-diff-all.tex
@@ -9599,10 +9599,10 @@ is established in \cite{OntoGraph}.
 
 \bc{39}
 The metaclass \DIFdelbegin %DIFDELCMD < \syntax{OWL Ontology} %%%
-\DIFdelend \DIFaddbegin \syntax{OWLOntology}\DIFadd{~\nref{ODM}, 11.2 }\DIFaddend is a subclass (in the sense of SMOF
+\DIFdelend \DIFaddbegin \syntax{OWLOntology}\DIFadd{~(\nref{ODM}, 11.2) }\DIFaddend is a subclass (in the sense of SMOF
 multiple classification) of \syntax{NativeDocument}.
 The metaclass \DIFdelbegin %DIFDELCMD < \syntax{OWL Universe} %%%
-\DIFdelend \DIFaddbegin \syntax{OWLUniverse}\DIFadd{~\nref{ODM}, 11.7 }\DIFaddend is a subclass (in the sense of SMOF
+\DIFdelend \DIFaddbegin \syntax{OWLUniverse}\DIFadd{~(\nref{ODM}, 11.7) }\DIFaddend is a subclass (in the sense of SMOF
 multiple classification) of \syntax{BasicOMS}.
 \ec
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -10037,9 +10037,9 @@ We distinguish three cases.
 \sclause{Abstract Syntax Conformance of Common Logic With \DOL}
 
 \bc{39}
-The metaclass \syntax{Text}\DIFaddbegin \DIFadd{~\nref{ODM}, 12.2 }\DIFaddend is a subclass (in the sense of SMOF \nref{SMOF}
+The metaclass \syntax{Text}\DIFaddbegin \DIFadd{~(\nref{ODM}, 12.2) }\DIFaddend is a subclass (in the sense of SMOF \nref{SMOF}
 multiple classification) of \syntax{NativeDocument}.
-The metaclass \syntax{Sentence}\DIFaddbegin \DIFadd{~\nref{ODM}, 12.2 }\DIFaddend is a subclass (in the sense of SMOF \nref{SMOF}
+The metaclass \syntax{Sentence}\DIFaddbegin \DIFadd{~(\nref{ODM}, 12.2) }\DIFaddend is a subclass (in the sense of SMOF \nref{SMOF}
 multiple classification) of \syntax{BasicOMS}.
 \ec
 
@@ -10141,10 +10141,10 @@ in order to obtain a theory in the \CL institution.
 
 \bc{39}
 The metaclass \DIFdelbegin %DIFDELCMD < \syntax{Document} %%%
-\DIFdelend \DIFaddbegin \syntax{rdfDocument}\DIFadd{~\nref{ODM}, 14.2.2 }\DIFaddend is a subclass (in the sense of SMOF \nref{SMOF}
+\DIFdelend \DIFaddbegin \syntax{rdfDocument}\DIFadd{~(\nref{ODM}, 14.2.2) }\DIFaddend is a subclass (in the sense of SMOF \nref{SMOF}
 multiple classification) of \syntax{NativeDocument}.
 The metaclass \DIFdelbegin %DIFDELCMD < \syntax{Triple} %%%
-\DIFdelend \DIFaddbegin \syntax{graph}\DIFadd{~\nref{ODM}, 14.2.3 }\DIFaddend is a subclass (in the sense of SMOF \nref{SMOF}
+\DIFdelend \DIFaddbegin \syntax{graph}\DIFadd{~(\nref{ODM}, 14.2.3) }\DIFaddend is a subclass (in the sense of SMOF \nref{SMOF}
 multiple classification) of \syntax{BasicOMS}.
 \ec
 
@@ -10249,17 +10249,17 @@ operations are query operations.
 
 \bc{39}
 The metaclass \DIFdelbegin %DIFDELCMD < \syntax{OWL Model} %%%
-\DIFdelend \DIFaddbegin \syntax{Package}\DIFadd{~\nref{UML} }\DIFaddend is a subclass (in the sense of SMOF \nref{SMOF}
+\DIFdelend \DIFaddbegin \syntax{Package}\DIFadd{~(\nref{UML}) }\DIFaddend is a subclass (in the sense of SMOF \nref{SMOF}
 multiple classification) of \syntax{NativeDocument}.
 The metaclass \DIFdelbegin %DIFDELCMD < \syntax{OWL PackageableElement} %%%
-\DIFdelend \DIFaddbegin \syntax{PackageableElement}\DIFadd{~\nref{UML} }\DIFaddend is a subclass (in the sense of SMOF \nref{SMOF}
+\DIFdelend \DIFaddbegin \syntax{PackageableElement}\DIFadd{~(\nref{UML}) }\DIFaddend is a subclass (in the sense of SMOF \nref{SMOF}
 multiple classification) of \syntax{BasicOMS}.
-\ec
 
 \sclause{Serialization Conformance of UML With \DOL}
 
-The XMI \nref{XMI} serialization, derived from the MOF metamodel, is widely used
+The XMI \DIFadd{(}\nref{XMI}\DIFadd{)} serialization, derived from the MOF metamodel, is widely used
 for UML. Hence, UML is serialization conformant with \DOL.
+\ec
 
 \sclause{Semantic Conformance of UML With \DOL}
 
