diff for document numer + files

--- a/Standard/OMG_OntoIOp_current-diff-all.tex
+++ b/Standard/OMG_OntoIOp_current-diff-all.tex
@@ -689,16 +689,21 @@ author=,date=,id=,replyto=,type=}{}%
 \nointerlineskip
 %\bc{98}
 \begin{onehalfspace}
-\textsf{\DIFdelbegin \textbf{\DIFdel{OMG Document Number:}}%DIFAUXCMD
-\DIFdelend \DIFaddbegin \textbf{\DIFadd{OMG Document Number: ptc/2017-08-02}}\DIFaddend }    \\  %ad/2015-08-01 ad/2015-05-03 ad/15-06-04
+\textsf{OMG Document Number: \DIFdelbegin \textbf{\DIFdel{ptc/2016-02-37}}%DIFAUXCMD
+\DIFdelend \DIFaddbegin \textbf{\DIFadd{ptc/2017-08-02}}\DIFaddend }    \\  %ad/2015-08-01 ad/2015-05-03 ad/15-06-04
 \textsf{\textbf{Standard document URL: \ \url{http://www.omg.org/spec/DOL/1.0/PDF}}} \\
 \textsf{\textbf{Machine Consumable File(s): \\ 
 \leftskip2em Normative:  \\
 \url{http://www.omg.org/spec/DOL/20151109/DOL-metamodel.xmi}\\
 Informative: \\
-\url{http://www.omg.org/spec/DOL/20151109/DOL-terms.rdf} \\}}
+\DIFdel{http://www.omg.org/spec/DOL/20151109/DOL-terms.rdf}
+\DIFadd{\url{http://www.omg.org/spec/DOL/20171106/DOL-terms.rdf}} \\
+\DIFadd{\url{http://www.omg.org/spec/DOL/20171106/DOL-terms.xml}} \\
+}}
 \end{onehalfspace} 
 %\ec
+
+
 
 \vskip 28pt
 \leaders\vrule width \textwidth\vskip1pt % or other desired thickness
