working on Linda’s comment sections heading changed preface added footer updated.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -70,7 +70,7 @@
 \pagestyle{fancy}
 %\fancyhead[LO,RE]{}
 %\fancyhead[RO,LE]{}
-\fancyfoot[LO,RE]{\iffloatpage{}{\scriptsize{\textsf{Distributed Ontology, Model, and Specification Language (DOL), v1.0 Beta}}}}
+\fancyfoot[LO,RE]{\iffloatpage{}{\scriptsize{\textsf{Distributed Ontology, Modeling, and Specification Language (DOL), Version 1.0}}}}
 \fancyfoot[RO,LE]{\iffloatpage{\thepage}{\thepage}}
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
@@ -131,22 +131,31 @@
 
 \usepackage{titlesec}
 
+% Arial 18 pt bold 
 \titleformat{name=\clause}
-  {\normalfont\Large\bfseries}{\theclause}{2em}{\hspace{-1em}}{}
+  {\sffamily\fontsize{18pt}{18pt}\bfseries}{\theclause}{2em}{\hspace{-1em}}{} 
 \titleformat{name=\clause,numberless}
-  {\normalfont\Large\bfseries}{}{1em}{\hspace{-1em}}{}
+  {\sffamily\huge\bfseries}{}{1em}{\hspace{-1em}}{}
+
+
+% Arial 14 pt bold 
 \titleformat{name=\sclause}
-  {\normalfont\large\bfseries}{\thesclause}{2em}{\hspace{-1em}}{}
+  {\sffamily \LARGE\bfseries}{\thesclause}{2em}{\hspace{-1em}}{}
 \titleformat{name=\sclause,numberless}
-  {\normalfont\large\bfseries}{}{1em}{\hspace{-1em}}{}
+  {\sffamily \LARGE\bfseries}{}{1em}{\hspace{-1em}}{}
+
+% Arial 12 pt bold 
 \titleformat{name=\ssclause}
-  {\normalfont\bfseries}{\thessclause}{2em}{\hspace{-1em}}{}
+  {\sffamily\bfseries\Large}{\thessclause}{2em}{\hspace{-1em}}{}
 \titleformat{name=\ssclause,numberless}
-  {\normalfont\bfseries}{}{1em}{\hspace{-1em}}{}
+  {\sffamily\bfseries\Large}{}{1em}{\hspace{-1em}}{}
+
+
+% Arial 10 pt bold 
 \titleformat{name=\sssclause}
-  {\normalfont\bfseries}{\thesssclause}{2em}{\hspace{-1em}}{}
+  {\sffamily\bfseries\normalsize}{\thesssclause}{2em}{\hspace{-1em}}{}
 \titleformat{name=\sssclause,numberless}
-  {\normalfont\bfseries}{}{1em}{\hspace{-1em}}{}
+  {\sffamily\bfseries\normalsize}{}{1em}{\hspace{-1em}}{}
 
 %% Utilities
 \usepackage{etoolbox}
@@ -660,7 +669,7 @@ The Distributed Ontology, Modeling, and Specification Language\tm
 
 
 \vskip\medskipamount %%% or other desired dimension
-\leaders\vrule width \textwidth\vskip1pt %%% or other desired thickness
+\leaders\vrule width \textwidth\vskip0.5pt %%% or other desired thickness
 \vskip 6pt 
 \nointerlineskip
 \begin{doublespace}
@@ -680,8 +689,8 @@ Informative Machine Consumable Files:\\
  \end{tabbing}
 \end{doublespace} 
 
-\vskip 28pt
-\leaders\vrule width \textwidth\vskip1pt % or other desired thickness
+\vskip 6pt
+\leaders\vrule width \textwidth\vskip0.5pt % or other desired thickness
 \vskip\medskipamount % ditto
 \nointerlineskip
 
@@ -809,6 +818,8 @@ OMG member companies write, adopt, and maintain its specifications following a m
     development environments. OMG's specifications include: UML\textregistered\xspace (Unified Modeling Language\texttrademark\xspace); 
 	 CORBA\textregistered\xspace (Common Object Request Broker Architecture); CWM\texttrademark\xspace (Common Warehouse Metamodel); and 
 	  industry-specific standards for dozens of vertical markets. 
+
+
 More information on the OMG is available at \url{http://www.omg.org/}.
 
 
@@ -822,34 +833,34 @@ More information on the OMG is available at \url{http://www.omg.org/}.
 
 As noted, OMG specifications address middleware, modeling and vertical domain frameworks. All OMG Specifications are available from the OMG website at:\newline
 \url{http://www.omg.org/spec}
-
-\noindent Specifications are organized by the following categories:
-\textbf{
-\begin{itemize}[leftmargin=*, label={}, topsep=0pt]
-	\item  Business Modeling Specifications
-	\item Middleware Specifications
-	\begin{itemize}[ label={-}, topsep=0pt,itemsep=-1ex,partopsep=1ex,parsep=1ex]
-		\item CORBA/IIOP
-		\item Data Distribution Services
-		\item Specialized CORBA
-	\end{itemize}				
-	\item IDL/Language Mapping Specifications
-	\item Modeling and Metadata Specifications
-	\begin{itemize}[ label={-}, topsep=0pt,itemsep=-1ex,partopsep=1ex,parsep=1ex]	
-		\item UML, MOF, CWM, XMI
-		\item UML Profile										
-	\end{itemize}			
-	\item Modernization Specifications
-	\item Platform Independent Model (PIM), Platform Specific Model (PSM), Interface Specifications
-	\begin{itemize}[ label={-}, topsep=0pt,itemsep=-1ex,partopsep=1ex,parsep=1ex]	
-		\item CORBAServices
-		\item CORBAFacilities
-	\end{itemize}			
-	\item OMG Domain Specifications
-	\item CORBA Embedded Intelligence Specifications
-	\item CORBA Security Specifications
-\end{itemize}	
-}
+%
+% \noindent Specifications are organized by the following categories:
+% \textbf{
+% \begin{itemize}[leftmargin=*, label={}, topsep=0pt]
+% 	\item  Business Modeling Specifications
+% 	\item Middleware Specifications
+% 	\begin{itemize}[ label={-}, topsep=0pt,itemsep=-1ex,partopsep=1ex,parsep=1ex]
+% 		\item CORBA/IIOP
+% 		\item Data Distribution Services
+% 		\item Specialized CORBA
+% 	\end{itemize}
+% 	\item IDL/Language Mapping Specifications
+% 	\item Modeling and Metadata Specifications
+% 	\begin{itemize}[ label={-}, topsep=0pt,itemsep=-1ex,partopsep=1ex,parsep=1ex]
+% 		\item UML, MOF, CWM, XMI
+% 		\item UML Profile
+% 	\end{itemize}
+% 	\item Modernization Specifications
+% 	\item Platform Independent Model (PIM), Platform Specific Model (PSM), Interface Specifications
+% 	\begin{itemize}[ label={-}, topsep=0pt,itemsep=-1ex,partopsep=1ex,parsep=1ex]
+% 		\item CORBAServices
+% 		\item CORBAFacilities
+% 	\end{itemize}
+% 	\item OMG Domain Specifications
+% 	\item CORBA Embedded Intelligence Specifications
+% 	\item CORBA Security Specifications
+% \end{itemize}
+% }
 
 \medskip 
 \noindent
@@ -874,26 +885,26 @@ Email: \url{pubs@omg.org}\\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
-\sclause*{Typographical Conventions}
-\addcontentsline{toc}{sclause}{Typographical Conventions}
-
-The type styles shown below are used in this document to distinguish
- programming statements from ordinary English. However, these conventions are
- not used in tables or section headings where no distinction is necessary.
-
-
-% normal text  
-% texttt{} fuer code
-% bold texttt fuer keywords 
-% lstlisting for grammar
-\medskip \noindent
-Computer Modern Roman: Standard body text
-
-\lstinline{Courier}: DOL code and DOL syntax elements
-
-\lstinline[keywordstyle=\color{black}\bfseries, keywords={Courier, bold}]{Courier bold}: keywords in DOL code
-
+%
+% \sclause*{Typographical Conventions}
+% \addcontentsline{toc}{sclause}{Typographical Conventions}
+%
+% The type styles shown below are used in this document to distinguish
+%  programming statements from ordinary English. However, these conventions are
+%  not used in tables or section headings where no distinction is necessary.
+%
+%
+% % normal text
+% % texttt{} fuer code
+% % bold texttt fuer keywords
+% % lstlisting for grammar
+% \medskip \noindent
+% Computer Modern Roman: Standard body text
+%
+% \lstinline{Courier}: DOL code and DOL syntax elements
+%
+% \lstinline[keywordstyle=\color{black}\bfseries, keywords={Courier, bold}]{Courier bold}: keywords in DOL code
+%
 
 
 %
