links are now blue. (And the proper blue.) All other cross-reference are just black without a box.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -129,7 +129,9 @@
 
 %% section titles
 
-\usepackage{titlesec}
+\usepackage{titlesec} 
+% this package is used to define various section headings (clause, subclause) and format it
+% according to OMG instructions 
 
 % Arial 18 pt bold 
 \titleformat{name=\clause}
@@ -156,6 +158,11 @@
   {\sffamily\bfseries\normalsize}{\thesssclause}{2em}{\hspace{-1em}}{}
 \titleformat{name=\sssclause,numberless}
   {\sffamily\bfseries\normalsize}{}{1em}{\hspace{-1em}}{}
+
+%% Captions of tables and figures are supposed to be Arial 10pt bold 
+\usepackage[font={normalsize, bf, sf}]{caption}
+
+
 
 %% Utilities
 \usepackage{etoolbox}
@@ -209,6 +216,16 @@
           bookmarksnumbered,
           hyperindex=true
          ]{hyperref}
+
+\definecolor{linkcolor}{rgb}{0.0, 0.0, .933} 
+\hypersetup{
+    colorlinks,
+    linkcolor=black,
+    citecolor=black,
+    urlcolor=linkcolor
+}
+
+
 
 %% To-do notes and/or comments
 %% \savesymbol{todo}
